# coding-proxy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  promote.yml  release.yml
.temp/: pr-54-body.md  pr-55-body.md
docs/: ci-cd.md  framework.md  issue.md  user-guide.md
docs/agents/: browser-validation.md  knowledge-map.md
docs/arch/: config-reference.md  convert.md  design-patterns.md  routing.md  testing.md  vendors.md
docs/guide/: api-reference.md  cli-reference.md  dashboard.md  monitoring.md  quickstart.md  vendors.md
docs/ops/: ci-cd.md
docs/zh-CN/: README.md
src/coding/proxy/: __init__.py  __main__.py  cli.py  pricing.py
src/coding/proxy/auth/: __init__.py  runtime.py  store.py
src/coding/proxy/auth/providers/: __init__.py  base.py  github.py  google.py
src/coding/proxy/backends/: __init__.py  anthropic.py  antigravity.py  antigravity_token_manager.py  base.py  copilot.py  copilot_models.py  copilot_retry.py  copilot_token_manager.py  copilot_urls.py  mixins.py  token_manager.py  types.py  zhipu.py
src/coding/proxy/cli/: __init__.py  auth_commands.py  banner.py
src/coding/proxy/compat/: __init__.py  canonical.py  session_store.py
src/coding/proxy/config/: __init__.py  auth_schema.py  backends.py  config.default.yaml  loader.py  resiliency.py  routing.py  schema.py  server.py  session_policy.py  vendors.py
src/coding/proxy/convert/: __init__.py  anthropic_to_gemini.py  anthropic_to_openai.py  gemini_sse_adapter.py  gemini_to_anthropic.py  openai_to_anthropic.py  vendor_channels.py
src/coding/proxy/logging/: __init__.py  db.py  formatters.py  stats.py
src/coding/proxy/model/: __init__.py  auth.py  backend.py  compat.py  constants.py  pricing.py  token.py  vendor.py
src/coding/proxy/native_api/: __init__.py  config.py  handler.py  operation.py  routes.py  usage_registry.py
src/coding/proxy/native_api/extractors/: __init__.py  anthropic.py  gemini.py  openai.py
src/coding/proxy/routing/: __init__.py  circuit_breaker.py  error_classifier.py  executor.py  model_mapper.py  quota_guard.py  rate_limit.py  retry.py  router.py  session_manager.py  session_policy.py  tier.py  usage_parser.py  usage_recorder.py
src/coding/proxy/server/: app.py  dashboard.py  factory.py  request_normalizer.py  responses.py  routes.py
src/coding/proxy/streaming/: __init__.py  anthropic_compat.py
src/coding/proxy/vendors/: __init__.py  alibaba.py  anthropic.py  antigravity.py  base.py  copilot.py  copilot_models.py  copilot_token_manager.py  copilot_urls.py  doubao.py  kimi.py  minimax.py  native_anthropic.py  token_manager.py  xiaomi.py  zhipu.py
src/coding_proxy/: __init__.py  __main__.py  cli.py
src/coding_proxy/backends/: __init__.py  anthropic.py  base.py
src/coding_proxy/logging/: db.py
src/coding_proxy/routing/: __init__.py  circuit_breaker.py  router.py
src/coding_proxy/server/: __init__.py  app.py
tests/: test_antigravity.py  test_app_routes.py  test_auto_login.py  test_backends.py  test_banner.py  test_circuit_breaker.py  test_cli_usage.py  test_compat.py  test_config_init.py  test_config_loader.py  test_convert_request.py  test_convert_response.py  test_convert_sse.py  test_copilot.py  test_copilot_convert_request.py  test_copilot_convert_response.py  test_copilot_models.py  test_copilot_urls.py  test_currency.py  test_error_classifier.py  test_logging_dual_write.py  test_mixins.py  test_model_auth.py  test_model_backend.py  test_model_compat.py  test_model_constants.py  test_model_mapper.py  test_model_pricing.py  test_model_token.py  test_model_vendor.py  test_native_api_base_url_override.py  test_native_api_extractors.py  test_native_api_handler.py  test_native_api_operation.py  test_native_api_routes.py  test_native_vendors.py  test_parse_usage.py  test_parse_usage_gemini.py  test_pricing.py  test_quota_guard.py  (+19 more)
tests/e2e/: conftest.py  test_e2e_http.py  test_e2e_token.py  test_e2e_vendor.py
