[project]
name = "coding-proxy"
version = "0.1.0"
description = "Claude Code 多后端智能代理 — 自动故障转移与 Token 用量追踪"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "typer>=0.24",
    "aiosqlite>=0.22",
    "rich>=14.3",
]

[project.scripts]
coding-proxy = "coding.proxy.cli:app"

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
