[project]
name = "coding-proxy"
version = "0.1.0a1"
description = "A High-Availability, Transparent, and Smart Multi-Vendor Proxy for Claude Code. Support Claude Plans, GitHub Copilot, Google Antigravity, ZAI/GLM."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ThreeFish-AI", email = "threefish.ai@gmail.com" }]
license = "Apache-2.0"
keywords = ["claude-code", "vibe-coding", "llm-agent", "antigravity", "github-copilot", "glm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "typer>=0.12.5,<0.22.0",
    "aiosqlite>=0.22",
    "rich>=14.3",
]

[project.urls]
"Source Code" = "https://github.com/ThreeFish-AI/coding-proxy"
"User Guide" = "https://github.com/ThreeFish-AI/coding-proxy/blob/master/docs/user-guide.md"
"Bug Tracker" = "https://github.com/ThreeFish-AI/coding-proxy/issues"

[project.scripts]
coding-proxy = "coding.proxy.cli:app"

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
